# view

./: .gitignore  README.md  pyproject.toml
exa_spim_view/: exa_spim_view.py
examples/: camera_example.py  channel_plan_example.py  example_view_model.py  filter_wheel_example.py  filter_wheel_simulated_example.py  flip_mount_example.py  laser_example.py  metadata_example.py  ni_example.py  volume_model_example.py  volume_plan_example.py  volume_widget_example.py  waveform_example.py  writer_example.py
examples/base-device/: camera_example.py  instrument_example.py  laser_example.py  schema_example.py  writer_example.py
examples/resources/: gui_config.yaml  imaris.py  simulated_instrument.yaml  simulated_laser.py  speakeasy.yaml  speakeasy_gui.yaml  speakeasy_instrument.yaml  test_acquisition.yaml
instruments/exa-spim-view/: exa_spim_view.py  gui_config.yaml  simulated_instrument.yaml  test_acquisition.yaml
instruments/simulated-instrument/: acquisition.yaml  gui_config.yaml  instrument.yaml  simulated-view.py  simulated_instrument.yaml  test_acquisition.yaml
instruments/simulated-instrument-z-y-x-coordinate/: gui_config.yaml  simulated-view.py  simulated_instrument.yaml  test_acquisition.yaml
instruments/speakeasy-view/: speakeasy_gui.yaml  speakeasy_instrument.yaml  speakeasy_view.py  test_acquisition.yaml
src/view/: __init__.py  acquisition_view.py  instrument_view.py
src/view/widgets/: base_device_widget.py
src/view/widgets/acquisition_widgets/: channel_plan_widget.py  metadata_widget.py  volume_model.py  volume_plan_widget.py  writer_widget.py
src/view/widgets/device_widgets/: camera_widget.py  filter_wheel_widget.py  flip_mount_widget.py  joystick_widget.py  laser_widget.py  ni_widget.py  stage_widget.py  waveform_widget.py
tests/: test_acquisition_view.py  test_base_device_widget.py  test_camera_widget.py  test_volume_plan_widget.py
view/: __init__.py  acquisition_view.py  instrument_view.py  view.py
view/pyqtgl/: pyqtgl_widgets.py
view/widgets/: base_device_widget.py
view/widgets/acquisition_widgets/: channel_plan_widget.py  metadata_widget.py  scan_plan_widget.py  tile_plan_widget.py  volume_model.py  volume_plan_widget.py  volume_widget.py
view/widgets/device_widgets/: camera_widget.py  filter_wheel_widget.py  joystick_widget.py  laser_widget.py  ni_widget.py  stage_widget.py  waveform_widget.py
view/widgets/examples/: camera_example.py  filter_wheel_example.py  ni_example.py
view/widgets/miscellaneous_widgets/: gl_ortho_view_widget.py  gl_path_item.py  gl_shaded_box_item.py  gl_tile_item.py  q__dock_widget_title_bar.py  q_add_tab_widget.py  q_clickable_label.py  q_dock_widget_title_bar.py  q_item_delegates.py  q_scrollable_float_slider.py  q_scrollable_line_edit.py  q_start_stop_table_header.py
(+15 files in other folders)
