[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "view"
authors = [{name = "Micah Woodard", email = "micah.woodard@alleninstitute.org"}]
version = "0.0.0"
dynamic = ["description"]
description-file='README.md'
dependencies = [
    'qtpy >= 2.2.0',
    'pyqtgraph >= 0.12.4',
    'numpy >= 1.23.5',
    'PyQt6 >= 6.6.1',
    'napari >= 0.4.19',
    'pyclesperanto >= 0.8.2',
    'lxml_html_clean >= 0.1.1',
    'infelction >= 0.5.1',
    'pymmcore-widgets >= 0.7.1'
]