[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "view"
authors = [{name = "Micah Woodard", email = "micah.woodard@alleninstitute.org"}]
version = "0.0.0"
dynamic = ["description"]
description-file='README.md'
dependencies = [
    'qtpy >= 2.2.0',
    'pyqtgraph >= 0.12.4',
    'numpy >= 1.23.5',
    'napari >= 0.4.19',
    #'infelction >= 0.5.1',
    'pymmcore-widgets >= 0.7.1',
    'pint >= 4.9.0',
    'schema >= 0.7.7'
]