[project]
name = "view"
description = "A python package providing a GUI and widgets for lightsheet microscopy"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{name = "Micah Woodard", email = "micah.woodard@alleninstitute.org"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
readme = "README.md"
keywords = ["lightsheet", "microscopy", "gui", "widgets"]
dynamic = ["version"]
dependencies = [
    'qtpy >= 2.2.0',
    'pyqtgraph >= 0.12.4',
    'numpy >= 1.23.5',
    'napari >= 0.4.19',
    'inflection >= 0.5.1',
    'pymmcore-widgets >= 0.7.1',
    'pint >= 0.24',
    'schema >= 0.7.7'
]

[project.optional-dependencies]
"dev" = [
    "pytest",
    "black",
    "isort",
]

[project.urls]
"Homepage" = "https://github.com/AllenNeuralDynamics/view"
"Issues" = "https://github.com/AllenNeuralDynamics/view/issues"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["view"]

[tool.setuptools.dynamic]
version = { attr = "view.__version__" }

[tool.black]
line-length = 120
target-version = ["py311"]
exclude = '''
(
    /(
        \.eggs         # exclude a few common directories in the
      | \.git          # root of the project
      | \.hg
      | \.mypy_cache
      | \.tox
      | \.venv
      | _build
      | build
      | dist
    )/
    | .gitignore
)
'''

[tool.isort]
line_length = 120
profile = "black"
